Url in for all references

--- a/reportMaster2/art.bib
+++ b/reportMaster2/art.bib
@@ -75,13 +75,20 @@
  keywords = {Algorithm classification, parallel programming, polyhedral model},
 } 
 
-@inproceedings{Art5,
-    author = {Veldhuizen, Todd L.},
-    title = {Arrays in Blitz++},
-    booktitle = {In Proceedings of the 2nd International Scientific Computing in Object-Oriented Parallel Environments (ISCOPE’98},
-    year = {1998},
-    pages = {223--230},
-    publisher = {Springer-Verlag}
+@incollection{Art5,
+year={1998},
+isbn={978-3-540-65387-5},
+booktitle={Computing in Object-Oriented Parallel Environments},
+volume={1505},
+series={Lecture Notes in Computer Science},
+editor={Caromel, Denis and Oldehoeft, RodneyR. and Tholburn, Marydell},
+doi={10.1007/3-540-49372-7_24},
+title={Arrays in Blitz++},
+url={http://dx.doi.org/10.1007/3-540-49372-7_24},
+publisher={Springer Berlin Heidelberg},
+author={Veldhuizen, ToddL.},
+pages={223-230},
+language={English}
 }
 
 @misc{Art6,
@@ -173,19 +180,25 @@ url =  {http://www.jot.fm/issues/issue_2008_02/article2/}
 } 
 
 @inproceedings{Art11,
-author={Nguyen, A. and Satish, N. and Chhugani, J. and Changkyu Kim and Dubey, P.},
-booktitle={High Performance Computing, Networking, Storage and Analysis (SC), 2010 International Conference for},
-title={3.5-D Blocking Optimization for Stencil Computations on Modern CPUs and GPUs},
-year={2010},
-month={Nov},
-pages={1-13},
-keywords={computer graphic equipment;coprocessors;lattice Boltzmann methods;optimisation;2.5D-spatial;3.5D blocking optimization;CPU;GPU;Lattice Boltzmann methods;SIMD;data-level parallelism;memory bandwidth;nearest-neighbor computations;on-chip memory;single- precision floating point;stencil computation sweeps;stencil kernels;temporal blocking;thread-level parallelism;Bandwidth;Graphics processing unit;Kernel;Memory management;System-on-a-chip;Three dimensional displays},
-doi={10.1109/SC.2010.2}
-}
+ author = {Nguyen, Anthony and Satish, Nadathur and Chhugani, Jatin and Kim, Changkyu and Dubey, Pradeep},
+ title = {3.5DD Blocking Optimization for Stencil Computations on Modern CPUs and GPUs},
+ booktitle = {Proceedings of the 2010 ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis},
+ series = {SC '10},
+ year = {2010},
+ isbn = {978-1-4244-7559-9},
+ pages = {1--13},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1109/SC.2010.2},
+ doi = {10.1109/SC.2010.2},
+ acmid = {1884658},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
 
 @misc{Art12,
     author = {Clavel Eker and M. Clavel and S. Eker and J. Meseguer},
     title = {Principles of Maude},
+    url = {http://citeseer.ist.psu.edu/viewdoc/summary?doi=10.1.1.51.9254},
     year = {1996}
 }
 
@@ -231,6 +244,7 @@ doi={10.1109/SC.2010.2}
   booktitle={Proceedings of the game developer conference},
   volume={18},
   pages={25},
+  url={http://www.dgp.toronto.edu/people/stam/reality/Research/pdf/GDC03.pdf},
   year={2003}
 }
 
@@ -273,6 +287,7 @@ doi={10.1109/SC.2010.2}
 @misc{Art18,
     author = {Tang, Yuan and Chowdhury, Rezaul and Luk, Chi-keung and Leiserson, Charles E.},
     title = {Coding Stencil Computations Using the Pochoir Stencil-Specification Language},
+    url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.363.9610},
     year = {2011}
 }
 
@@ -299,6 +314,7 @@ doi={10.1109/SC.2010.2}
     title = {Active Libraries: Rethinking the roles of compilers and libraries},
     booktitle = {In Proceedings of the SIAM Workshop on Object Oriented Methods for Inter-operable Scientific and Engineering Computing OO’98},
     year = {1998},
+    url = {http://arxiv.org/abs/math/9810022},
     publisher = {SIAM Press}
 }
 
@@ -308,7 +324,8 @@ doi={10.1109/SC.2010.2}
     journal = {C++ Report},
     year = {1995},
     volume = {7},
-    pages = {26--31}
+    pages = {26--31},
+    url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.43.248}
 }
 
 @incollection{Art22,
@@ -336,6 +353,7 @@ doi={10.1109/SC.2010.2}
 	pages={1-8},
 	keywords={application program interfaces;message passing;parallel programming;MPI code;clock scaling;feature-size reduction;message passing interface;multicore technologies;multiprocessor technologies;parallel application development process;parallel programming;parallel tools platform project;Application software;Concurrent computing;Debugging;Electronics packaging;Hardware;Parallel processing;Parallel programming;Performance analysis;Programming profession;System recovery},
 	doi={10.1109/IPDPS.2009.5160941},
+	url={https://www.computer.org/csdl/proceedings/ipdps/2009/3751/00/05160941.pdf},
 	ISSN={1530-2075}
 }
 
@@ -347,6 +365,7 @@ doi={10.1109/SC.2010.2}
 	month={Nov},
 	pages={540-550},
 	keywords={Parallel programming},
+	url={http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=5348986},
 	doi={10.1145/76263.76323}
 }
 
@@ -359,5 +378,6 @@ doi={10.1109/SC.2010.2}
 	pages={410-419},
 	keywords={benchmark testing;edge detection;parallel programming;parallelising compilers;program control structures;software maintenance;software performance evaluation;application source code modification;automatic loop parallelization;benchmark performance;compiler guided refactoring;edge detection;eight-core Intel Xeon 5570 system;image processing;instruction-level parallelism;interactive compilation feedback system;loop-level parallelism;loop-parallel code generation;parallel application performance;quad-core IBM POWER6 system;scalable parallelized code;semiautomatic parallelization;sequential benchmarks;Arrays;Benchmark testing;Image edge detection;Kernel;Optimization;Production;Radiation detectors;Automatic Loop Parallelization;Compiler Feedback;Refactoring},
 	doi={10.1109/ICPP.2012.48},
+	url={http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6337602},
 	ISSN={0190-3918}
 }
