--- a/reportMaster2/ths.bib
+++ b/reportMaster2/ths.bib
@@ -7,6 +7,7 @@
    title = {Skeleton Programming for Heterogeneous GPU-based Systems},
    series = {Linköping Studies in Science and Technology. Thesis},
    number = {1504},
+   url = {http://www.researchgate.net/publication/267415356_Skeleton_Programming_for_Heterogeneous_GPU-based_Systems},
    year = {2011}
 }
 
@@ -14,6 +15,7 @@
 	author={Amini, Mehdi},
 	title={Source-to-Source Automatic Program Transformations for GPU-like Hardware Accelerators},
 	school={Mines ParisTech},
+	url={http://hal-ineris.ccsd.cnrs.fr/ENSMP_CRI/pastel-00958033v1},
 	year={2012}
 }
 
@@ -21,6 +23,7 @@
 	author={Thibault, Samuel},
 	title={Ordonnancement de processus légers sur architectures multiprocesseurs hiérarchiques : BubbleSched, une approche exploitant la structure du parallélisme des applications},
 	school={Université Bordeaux 1},
+	url={https://tel.archives-ouvertes.fr/tel-00322881},
 	year={2007}
 }
 
@@ -28,5 +31,6 @@
 	author={Broquedis, François},
 	title={De l’exécution structurée d’applications scientifiques OpenMP sur architectures hiérarchiques},
 	school={Université Bordeaux 1},
+	url={https://hal.inria.fr/tel-00793472/en},
 	year={2010}
 }
