Second section of introduction

--- a/reportMaster2/1-Intro.tex
+++ b/reportMaster2/1-Intro.tex
@@ -14,11 +14,15 @@ La solution la plus simple consisterait à se baser uniquement sur la loi de Moo
 
 La première solution s'appuyait ainsi sur l'augmentation du nombre d'opérations par seconde supporté par le matériel, possédant \emph{un seul} processeur. Une autre solution est donc d'augmenter le nombre de processeurs, il s'agit de l'introduction du parallélisme dans le matériel. Celui-ci peut s'effectuer de plusieurs manières : à l'intérieur et à l'extérieur du processeur. À l'intérieur, il s'agit soit de subdiviser les instructions en  micro-instructions afin de créer un pipeline (ainsi une instruction peut commencer immédiatement après la fin de la première micro-instruction de l'instruction précédente), soit de dupliquer certains composants de l'architecture afin d'exécuter la même instruction sur plusieurs données à la fois. Les processeurs modernes intègrent tous ces deux technologies : le pipeline d'instructions et l'architecture nommée superscalaire.  À l'extérieur il s'agit de connecter plusieurs processeurs les uns avec les autres, tous participant aux calculs nécessités par le programme de base. Différentes manières de relier les processeurs existent, ils peuvent alors être appelés des cœurs ; dans toute la suite du rapport, un processeur est synonyme d'un ensemble de cœurs connectés entre eux par de la mémoire cache hiérarchique en accès uniforme\footnote{Cette notion sera explicitée au point \ldots~ .}.
 
-En modifiant la nature du matériel (et non seulement ses capacités d'ordre physique comme la fréquence d'horloge) cela induit des modifications dans la façon de transcrire les algorithmes (par exemple pour utiliser le côté superscalaire), ainsi que dans les algorithmes eux-mêmes qui ne sont parfois plus du tout adaptés (notamment à cause des communications entre les processeurs, inexistantes auparavant). Écrire un programme destiné à une machine parallèle nécessite donc des algorithmes souvent très spécifiques à la configuration de la machine d'exécution, ce qui rend leur écriture complexe.
+En modifiant la nature du matériel (et non seulement ses capacités d'ordre physique comme la fréquence d'horloge) cela induit des modifications dans la façon de transcrire les algorithmes (par exemple pour utiliser le côté superscalaire), ainsi que dans les algorithmes eux-mêmes qui ne sont parfois plus du tout adaptés (notamment à cause des communications entre les processeurs, inexistantes auparavant). Écrire un programme destiné à une machine parallèle nécessite donc des algorithmes souvent très spécifiques à la configuration de la machine d'exécution, ce qui est d'autant plus complexe avec les architectures des machines actuelles.
 
 \section{\'Ecriture de code parallèle}
 
-C'est difficile, même pour le compilateur
+Les algorithmes étant souvent spécifiques au type de parallélisme et à l'architecture de la machine cible, les langages permettant d'écrire des programmes parallèles automatisent peu la génération de codes parfaitement adaptés afin d'obtenir l'optimum des performances. En pratique la plupart des langages modernes permettent l'expression du parallélisme sans le découvrir eux-même ; certains outils aident à écrire du code parallèle mais ils sont souvent expérimentaux et nécessitent alors que le code automatiquement produit soit vérifié.
+
+Les difficultés inhérentes à la production d'un programme parallèle sont de plusieurs natures, notamment l'identification des sections parallèles et de celles obligatoirement séquentielles, ainsi que la gestion des communication et l'utilisation de toutes les ressources disponibles sur la matériel. L'identification des régions parallélisables ou non dépend de l'algorithme utilisé pour résoudre le problème voulu. Un programme bien parallélisé réduit au maximum le nombre d'opérations qui sont exécutées séquentiellement, afin que la majeure partie du temps d'exécution soit passée dans des sections parallèles où toute la puissance de la machine parallèle est utilisée. Par ailleurs il est essentiel de gérer les communications entre les différents processeurs afin que des calculs puissent être effectués pendant les communications ; on parle alors du recouvrement des communications. Enfin il convient d'utiliser le plus de ressources possibles sans que cette utilisation n'entraîne d'effort trop important, par exemple si de nombreuses parties de l'algorithme nécessitent une synchronisation de tous les processeurs -- ce qui est très coûteux en temps.
+
+Actuellement c'est au programmeur qu'incombent presque toutes ces tâches, or cela nécessite beaucoup de compétences, de temps, et de tests avant de parvenir à un résultat acceptable. S'il n'est pas toujours possible de découvrir le parallélisme automatiquement, il n'est pas non plus toujours facile de savoir où le décrire. Alors que certaines options sont très proches du processeur (comme la caractère superscalaire) et doivent être gérées de manière assez fines, d'autres peuvent être prises en charge à un plus haut-niveau comme le lancement de plusieurs procédures distinctes en parallèle (a priori chacune des procédures étant alors associée à un processeur libre). Cela amène à une hiérarchisation du parallélisme, ce qui complique encore plus la tâche du programmeur.
 
 \section{Choix du niveau d'expression du parallélisme}
 
