--- a/reportMaster2/ths.bib
+++ b/reportMaster2/ths.bib
@@ -1,14 +1,27 @@
+@thesis{MstThs1,
+   author = {Dastgeer, Usman},
+   institution = {Linköping University, PELAB - Programming Environment Laboratory},
+   pages = {240},
+   publisher = {Linköping University Electronic Press},
+   school = {Linköping UniversityLinköping University, PELAB - Programming Environment Laboratory, The Institute of Technology},
+   title = {Skeleton Programming for Heterogeneous GPU-based Systems},
+   series = {Linköping Studies in Science and Technology. Thesis},
+   number = {1504},
+   url = {http://liu.diva-portal.org/smash/record.jsf?pid=diva2\%3A437140},
+   year = {2011}
+}
+
 @thesis{Ths1,
    author = {Dastgeer, Usman},
    institution = {Linköping University, PELAB - Programming Environment Laboratory},
    pages = {90},
    publisher = {Linköping University Electronic Press},
    school = {Linköping UniversityLinköping University, PELAB - Programming Environment Laboratory, The Institute of Technology},
-   title = {Skeleton Programming for Heterogeneous GPU-based Systems},
+   title = {Performance-aware Component Composition for GPU-based systems},
    series = {Linköping Studies in Science and Technology. Thesis},
-   number = {1504},
-   url = {http://www.researchgate.net/publication/267415356_Skeleton_Programming_for_Heterogeneous_GPU-based_Systems},
-   year = {2011}
+   number = {1581},
+   url = {http://liu.diva-portal.org/smash/record.jsf?pid=diva2\%3A712422},
+   year = {2014}
 }
 
 @thesis{Ths2,
