Al references cited

--- a/reportMaster2/3-Biblio.tex
+++ b/reportMaster2/3-Biblio.tex
@@ -2,6 +2,8 @@
 
 \chapter{Bibliothèque de stencils basée sur SYCL}
 
+Active libraries \cite{Art20} (+redonner les 4 points clés)
+
 \section{Présentation générale}
 
 Fonctions disponibles
@@ -9,8 +11,14 @@ Fonctions disponibles
 \section{Détails d'implantation}
 
 C++14 et autres
+Expression template \cite{Web4,Art21}
+Partial specialization \cite{Web1}
+Typename keyword \cite{Web2}
 
 \section{\'Evolutions possibles}
 
 Reprendre slides : surtout agrégation de stencils
+Overlapped tiling \cite{Art17}
+Variadic templates \cite{Art6}
+
 
