--- a/reportMaster2/4-Eval.tex
+++ b/reportMaster2/4-Eval.tex
@@ -8,12 +8,15 @@
 Comparaisons d'expressivités (nombre de lignes, nombres de symboles, typage à la compilation), factorisation de code
 Reprendre slides : différents cas de tests
 
+Programme test fluide pour jeux \cite{Art15}
+
 
 \section{Performances quantitatives sur machines dédiées}
 
 Description du matériel
 
 Mesures de temps
+(Pour hiérarchisation, \cite{Ths3,Ths4})
 
 Mesures de compteurs
 
