--- a/reportMaster2/main.tex
+++ b/reportMaster2/main.tex
@@ -80,7 +80,7 @@ Durant toute la durée du stage, Olivier Aumage et Denis Barthou ont répondu à
 \chapter*{Bibliographie}
 \addcontentsline{toc}{chapter}{Bibliographie}
 
-\nocite{*} %% à commenter
+\nocite{Web3} %% à commenter
 
 \section*{Articles}
 
